[project]
name = "temperature-analysis"
version = "0.1.0"
description = "Multi-city climate analysis"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "ruff>=0.15.11",
]
